--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ index.html
 # Type checker and linter caches
 .mypy_cache/
 .ruff_cache/
+
+# Node modules (if any Node.js projects are included)
+node_modules/
